--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
     margin-bottom: 25px;
 }
 
-.form-container .resultat {
+.form-container .message {
     text-align: center;
     margin-bottom: 32px;
     font-weight: 600;
